# AutoLyrics_AI

./: .dockerignore  .gitignore  .kilocodemodes  Dockerfile  README.md  agent_utils.py  compare_lyrics.py  explain_lyrics.py  extract_metadata.py  generate_lrc.py  identify_song.py  logging_config.py  main.py  patch_add_metadata_to_lrc.py  process_flac_lyrics.py  process_lyrics.py  pyproject.toml  search_lyrics.py  search_song_story.py  separate_vocals.py  test_extract_web_content.py  transcribe_vocals.py  transcribe_vocals_cpp.py  transcribe_vocals_stable.py  translate_lrc.py  utils.py  verify_and_correct_timestamps.py  verify_lyrics.py
.kilocode/: mcp.json
.kilocode/rules/: coding_standards.md  documentation_style.md
docs/: README.md
docs/modules/: explain_lyrics.md  extract_metadata.md  generate_lrc.md  identify_song.md  main.md  (+9 more)
prompt/: grammatical_correction_prompt.txt  lrc_explanation_prompt.txt  lrc_explanation_traditional_chinese_prompt.txt  lrc_generation_prompt.txt  lrc_generic_translation_prompt.txt  lrc_timestamp_verification_prompt.txt  lrc_traditional_chinese_prompt.txt  lyrics_verification_prompt.txt  song_identification_prompt.txt  song_identification_with_metadata_prompt.txt  song_story_search_prompt.txt
tests/: TEST_README.md  test_extract_metadata.py  test_folder_structure.py  test_generate_lrc.py  test_logging_config.py  test_process_lyrics_integration.py  test_requirements.txt  test_runner.py  test_search_lyrics.py  test_separate_vocals.py  test_translate_lrc.py  test_utils.py
utils/: __init__.py  agent_utils.py  logging_config.py  utils.py
(+6 files in other folders)
