[project]
name = "music-lyric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-separator[cpu]>=0.39.0",
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "faster-whisper>=1.2.0",
    "logfire>=4.11.0",
    "mutagen>=1.47.0",
    "openai>=2.0.1",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
