[project]
name = "music-lyric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-separator[cpu]>=0.39.0",
    "faster-whisper>=1.2.0",
    "ffmpeg-normalize>=1.33.1",
    "logfire>=4.11.0",
    "mutagen>=1.47.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.1.1",
    "pywhispercpp>=1.3.3",
    "requests>=2.32.5",
]
