[project]
name = "music-lyric"
version = "1.0"
description = "Music lyric extractor pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "demucs>=4.0.1",
    "ffmpeg-normalize>=1.33.1",
    "logfire>=4.11.0",
    "mutagen>=1.47.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "stable-ts>=2.19.1",
    "stable-ts[mlx]>=2.19.1 ; sys_platform == 'darwin'",
    "tqdm>=4.67.1",
]
